--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,13 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
+	// https://mvnrepository.com/artifact/org.json/json
+	implementation 'org.json:json:20231013'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310' // 사용 중인 Jackson 버전에 맞게 조정
+	implementation 'org.springframework.boot:spring-boot-starter-json'
+
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
