--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-json'
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
-
+	implementation 'org.modelmapper:modelmapper:3.2.0'
 
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
